--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!--login-->
     <div class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
@@ -29,3 +30,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
