--- a/index.html
+++ b/index.html
@@ -3,31 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Your Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!--login-->
-    <div class="login-container">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="input-group">
-                <input type="checkbox" id="rememberMe" name="rememberMe">
-                <label for="rememberMe">Remember Me</label>
-            </div>
-            <button type="submit">Login</button>
-            <p class="register-text">Don't have an account? <a href="#">Register</a></p>
-        </form>
-    </div>
-    <script src="script.js"></script>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home"><h3>Home</h3></a></li>
+                <li><a href="#about"><h3>About</h3></a></li>
+                <li><a href="#projects"><h3>Projects</h3></a></li>
+                <li><a href="#certificates"><h3>Certificates</h3></a></li>
+                <li><a href="#contact"><h3>Contact</h3></a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="Home">
+        <h1>Hi, I'm Sudeep Varma</h1>
+        <p><h3>Cloud Engineer</h3></p>
+    </section>
+  
+    <footer>
+        <p>© 2024 Your Name</p>
+    </footer>
 </body>
 </html>
-
